--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -19,9 +19,15 @@ $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
+$color__blue: #70b3cb;
+$color__orange: #F9AC31;
+$color__gray: #444444;
+
 // Typography
 
-$font__main: sans-serif;
+$font__main: 'Roboto', sans-serif;
+$font__header: 'Titillium Web', sans-serif;
+
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
