--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -28,6 +28,9 @@ $color__gray: #444444;
 $font__main: 'Roboto', sans-serif;
 $font__header: 'Titillium Web', sans-serif;
 
+$font-size__main: 18px;
+$font-size__header: 36px;
+
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
