footer.php base html

--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -1,7 +1,7 @@
 /* Footer */
 
 .site-footer {
-    background: url(../../images/dark-wood.png);
+    background-color: $color__background-screen;
     background-size: 350px 512px;
     color: #fff;
     height: 350px;
