add hero image front-page

--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -18,12 +18,12 @@ $color__border-abbr: #666;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
-
+// Bix Colors
 $color__blue: #70b3cb;
 $color__orange: #F9AC31;
 $color__gray: #444444;
 
-// Typography
+// Bix Typography
 
 $font__main: 'Roboto', sans-serif;
 $font__header: 'Titillium Web', sans-serif;
@@ -31,6 +31,7 @@ $font__header: 'Titillium Web', sans-serif;
 $font-size__main: 18px;
 $font-size__header: 36px;
 
+//Boiler Plate Styles
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
