--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -133,4 +133,26 @@
 	// 	}
 	// }
 
+body {
+	// background: $color__gray;
+}
 
+.main-navigation {
+	height: 30px;
+	display: flex;
+	position: relative;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.logo-link {
+	height: 90%;
+	img {
+		height: 90%;
+	}
+}
+
+.menu-main-menu-container {
+	display: none;
+	position: absolute;
+}
