--- a/themes/bix/sass/_front-page.scss
+++ b/themes/bix/sass/_front-page.scss
@@ -4,12 +4,50 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 90vh;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
   position: relative;
 	header{
 		position: absolute;
 		left: 9999px;
 	}
+  
+  .site-logo{
+    max-width: 250px;
+    height: auto;
+    margin-bottom:0;
+  }
 
+  h2,h3{
+    color: #fff;
+    margin-bottom:0;
+  }
+  h2{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: $font__header;
+    letter-spacing: 1px;
+    font-size: 30px;
+  }
+  h3{
+    font-weight: 100;
+    padding: 5px 20px;
+    border-top: solid #fff 2px;
+    border-bottom: solid #fff 2px;
+    margin-bottom: 20%;
+  }
+  .btn-download{
+   @include btn;
+    padding: 8px 46px;
+    margin-bottom: 10%;
+  }
+
+  .btn-down{
+     @include down-arrow;
+    .fa{
+      font-size: 30px;
+    }
+  }
 }
 
