style pop up menu

--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -138,21 +138,70 @@ body {
 }
 
 .main-navigation {
-	height: 30px;
+	height: auto;
+	padding: 10px;
 	display: flex;
 	position: relative;
 	align-items: center;
 	justify-content: space-between;
+	border-bottom: solid 1px lighten($color__orange, 30%);
 }
 
 .logo-link {
-	height: 90%;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	img {
-		height: 90%;
+		height: 25px;
 	}
+}
+
+.menu-button {
+	font-size: 25px;
+	line-height: 0;
+	color: $color__gray;
+	z-index: 2;
+}
+
+div ul.menu-active {
+	transform: translateX(0);
+}
+
+div.display-show {
+	display: block;
 }
 
 .menu-main-menu-container {
 	display: none;
 	position: absolute;
+	top: 0;
+	right: 0;
+	background: rgba(0,0,0,0.7);
+	width:100vw;
+	height:  100vh;
+	overflow: hidden;
+	ul {
+		margin: 0;
+		padding: 10px 25px;
+		border-top: 46px solid $color__blue;
+		position: absolute;
+		top: 0;
+		right: 0;
+		transform: translateX(130px);
+		list-style: none;
+		text-align: right;
+		background: white;
+		li {
+			margin: 15px 0;
+			a {
+				font-size: $font-size__main;
+				text-decoration: none;
+				color: $color__blue;
+				text-transform: uppercase;
+				font-weight: bold;
+			}
+		}
+		
+	}
 }
