add toggle on menu

--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -168,10 +168,6 @@ div ul.menu-active {
 	transform: translateX(0);
 }
 
-div.display-show {
-	display: block;
-}
-
 .menu-main-menu-container {
 	display: none;
 	position: absolute;
@@ -182,13 +178,14 @@ div.display-show {
 	height:  100vh;
 	overflow: hidden;
 	ul {
+		display: none;
 		margin: 0;
 		padding: 10px 25px;
 		border-top: 46px solid $color__blue;
 		position: absolute;
 		top: 0;
 		right: 0;
-		transform: translateX(130px);
+		//transform: translateX(130px);
 		list-style: none;
 		text-align: right;
 		background: white;
