--- a/themes/bix/sass/_general.scss
+++ b/themes/bix/sass/_general.scss
@@ -8,3 +8,21 @@
 .content-area{
 	width: 100%;
 }
+
+//Headings for Top Banner Titles
+.bix-book-title{
+	text-transform: uppercase;
+  font-weight: bold;
+  font-family: $font__header;
+  letter-spacing: 1px;
+  font-size: 30px;
+  color: #fff;
+}
+
+.bix-book-subheading{
+	font-weight: 100;
+  padding: 5px 20px;
+  border-top: solid #fff 2px;
+  border-bottom: solid #fff 2px;
+  color: #fff;
+}
