--- a/themes/bix/sass/_front-page.scss
+++ b/themes/bix/sass/_front-page.scss
@@ -15,7 +15,6 @@
   
   .site-logo{
     max-width: 250px;
-
     height: auto;
     margin-bottom:0;
     margin-top: 40px;
@@ -41,20 +40,31 @@
     }
   }
 }
-//home Quote One
-.quote-one{
-  height: 600px; 
-  .quote-one-img{
-    background: url(../../images/bix-book-sky.png) no-repeat center top;
+
+
+//home page quotes
+.quote-wrapper{
+  height: auto; 
+  .quote-img{
+    background: url(../../images/bix-homepage-ocean.png) no-repeat center top;
     background-size: cover;
-    height: 350px;
+    height: 250px;
     overflow: hidden;
     position: relative;
-    display: flex;
-    justify-content: center;
   }
-  .quote-one-img:after{
+  .quote-img-2 {
+   background: url(../../images/bix-homepage-business.png) no-repeat center top;
+    background-size: cover;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+  }
+  .quote-img:after, .quote-img-2:after{
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     content:" ";
     bottom:0px;
     width: 0;
@@ -63,12 +73,33 @@
     border-width: 0 40px 12px;
     border-color: transparent transparent #fcfcfc transparent;
   }
-  .quote-one-text{
+  .quote-wrapper-text{
     text-align: center;
     font-size: 20px;
+    padding: 10px 15px;
   }
-
+  .quotes-text{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 30px;
+  }
+  .quotes-text-orange{
+    color: $color__orange;
+  }
 }
 
+//read sample stories
+.sample-story{
+  height:250px;
+  background-color: $color__blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .btn-download{
+     @include btn;
+     padding: 8px 46px;
+  }
+}
 
 
