--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -65,3 +65,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "general";
 @import "page-templates";
 @import "front-page";
+@import "footer";
