--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -24,6 +24,7 @@ margin-bottom: 10px;
 	width: 100%;
 	height: 30vh;
 	margin-bottom: 10px;
+	border: #F9AC31 solid 2px;
 }
 
 .footer-form button {
